--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
   <app-navigation-bar></app-navigation-bar>
+  <app-loading-bar></app-loading-bar>
   <div class="outlet-container">
     <router-outlet></router-outlet>
   </div>
